[ci] disable UseCompactObjectHeaders (confirmed JDK 25 correctness bugs)
-XX:+UseCompactObjectHeaders (JEP 519, opt-in on JDK 25) has confirmed JDK 25
correctness bugs whose documented workaround is to disable it: JDK-8380060
(C2 wrong execution with COH and arraycopy), G1 concurrent-mark metadata
corruption, and Shenandoah failures.

kyo's tests exercise every trigger: heavy fiber concurrency, pervasive
arraycopy (Chunk/Span), G1GC, and Unsafe.objectFieldOffset (Scala LazyVals,
kyo's Unsafe tier). A rare, non-deterministic ClassNotFoundException for a
class present on disk in the forked test JVM matches this corruption
signature.

Remove the flag from the CI driver and forked-test-JVM opts, the readme job,
and the local sbt/podman opts. The forks keep their explicit -Xmx5g cap.